<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.physedu.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_kamera"
            app:destination="@id/nav_camera" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_about"
            app:destination="@id/nav_about" />
    </fragment>

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.physedu.fragment.KameraFragment"
        android:label="@string/title_kamera"
        tools:layout="@layout/fragment_kamera" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.physedu.fragment.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>