<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    tools:context=".activity.HomeFragment"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/img_selamatDatang"
        android:layout_width="210dp"
        android:layout_height="210dp"
        app:layout_editor_absoluteY="2dp"
        android:src="@drawable/logo_home"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/selamat_datang"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/tv_sapaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/physedu_friends"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginStart="70dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="120dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="397dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_kelasUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            tools:listitem="@layout/item_kelas_user"
            tools:itemCount="3"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/img_selamatDatang">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="103dp"
                android:src="@drawable/logo_ajakan"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_ayo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayoo"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_editor_absoluteY="10dp"
                app:layout_editor_absoluteX="75dp"/>

            <TextView
                android:id="@+id/tv_pilih"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih_kelasmu"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_editor_absoluteY="35dp"
                app:layout_editor_absoluteX="50dp"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/white"
                android:text="@string/kategori_kelas"
                android:textColor="@color/blue"
                android:textSize="10sp"
                app:layout_constraintTop_toBottomOf="@id/tv_pilih"
                app:layout_editor_absoluteX="45dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>